--- a/rando/Cargo.toml
+++ b/rando/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+failure = "0.1.6"
+ron = "0.5.1"
+serde = { version = "1.0", features = ["derive"] }
+super-metroid = { path = "../super-metroid" }
