--- a/super-metroid/Cargo.toml
+++ b/super-metroid/Cargo.toml
@@ -12,3 +12,5 @@ failure = "0.1.6"
 num = "0.2"
 num-derive = "0.3"
 num-traits = "0.2"
+serde = { version = "1.0", features = ["derive"] }
+serde-hex = "0.1.0"
