--- a/rando/Cargo.toml
+++ b/rando/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 dot = "0.1.4"
 failure = "0.1.6"
+num = "0.2"
 parse_int = "0.4.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.45"
