--- a/super-metroid/Cargo.toml
+++ b/super-metroid/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 authors = ["Erik Gilling <konkers@konkers.net>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = []
+render = ["image"]
 
 [dependencies]
 byteorder = "1"
@@ -13,3 +15,5 @@ num = "0.2"
 num-derive = "0.3"
 num-traits = "0.2"
 serde = { version = "1.0", features = ["derive"] }
+
+image = { version = "0.22.4", optional = true }
