--- a/rando/Cargo.toml
+++ b/rando/Cargo.toml
@@ -15,4 +15,4 @@ parse_int = "0.4.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.45"
 structopt = "0.3.9"
-super-metroid = { path = "../super-metroid" }
+super-metroid = { path = "../super-metroid", features = ["render"] }
