--- a/rando/Cargo.toml
+++ b/rando/Cargo.toml
@@ -12,6 +12,7 @@ failure = "0.1.6"
 image = "0.22.4"
 num = "0.2"
 parse_int = "0.4.0"
+regex = "1.3.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.45"
 structopt = "0.3.9"
